[tool.poetry]
name = "pylume"
version = "0.1.0"
description = "Python SDK for lume - run macOS and Linux VMs on Apple Silicon"
authors = ["TryCua <f@trycua.com>"]
readme = "README.md"
license = "MIT"
homepage = "https://github.com/trycua/pylume"
repository = "https://github.com/trycua/pylume"
keywords = ["macos", "virtualization", "vm", "apple-silicon"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS :: MacOS X",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[tool.poetry.dependencies]
python = "^3.10"
httpx = "^0.26.0"
pydantic = "^2.5.3"
click = "^8.1.7"
rich = "^13.7.0"
pygments = "^2.17.2"
pexpect = "^4.9.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"
pytest-asyncio = "^0.23.3"
black = "^23.12.1"
isort = "^5.13.2"
mypy = "^1.8.0"
ruff = "^0.1.11"

[tool.poetry.scripts]
pylume = "pylume.main:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
