[tool.poetry]
name = "pylume"
version = "0.1.0"
description = "Python SDK for lume - run macOS and Linux VMs on Apple Silicon"
authors = ["TryCua <gh@trycua.com>"]
readme = "README.md"
license = "MIT"
homepage = "https://github.com/trycua/pylume"
repository = "https://github.com/trycua/pylume"
keywords = ["macos", "virtualization", "vm", "apple-silicon"]
classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS :: MacOS X",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

packages = [
    { include = "pylume" }
]

# This should be at the root level of tool.poetry
include = [
    { path = "pylume/lume", format = "sdist" },
    { path = "pylume/lume", format = "wheel" }
]

[tool.poetry.dependencies]
python = "^3.9"
pydantic = "^2.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0.0"
pytest-asyncio = "^0.23.0"
black = "^23.0.0"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"